--- a/KeylessOBS/gamestate_integration_obs_updated.cfg
+++ b/KeylessOBS/gamestate_integration_obs_updated.cfg
@@ -1,6 +1,6 @@
 "Observer All Players v.1"
 {
- "uri" "http://192.168.1.86:8082"
+ "uri" "http://localhost:8082"
  "timeout" "5.0"
  "buffer"  "0.1"
  "throttle" "0.1"
@@ -10,18 +10,24 @@
    "token" "Q79v5tcxVQ8u"
  }
  "data"
- {
-   "provider"            "1"
-   "map"                 "1"
-   "round"               "1"
-   "player_id"           "1"
-   "allplayers_id"       "1"      // Same as 'player_id' but for all players. 'allplayers' versions are only valid for HLTV and observers
-   "player_state"        "1"      
-   "allplayers_state"    "1"      
-   "allplayers_match_stats"  "1"  
-   "allplayers_weapons"  "1"      
-   "allplayers_position" "1"      // output the player world positions, only valid for GOTV or spectators. 
-   "phase_countdowns"    "1"      // countdowns of each second remaining for game phases, eg round time left, time until bomb explode, freezetime. Only valid for GOTV or spectators. 
-   "allgrenades"    "1"           // output information about all grenades and inferno flames in the world, only valid for GOTV or spectators.
- }
+    {
+        "provider"                  "1"
+        "tournamentdraft"           "1"
+        "map"                       "1"
+        "map_round_wins"            "1"
+        "round"                     "1"
+        "player_id"                 "1"
+        "player_state"              "1"
+        "player_weapons"            "1"
+        "player_match_stats"        "1"
+        "player_position"           "1"
+        "phase_countdowns"          "1"
+        "allplayers_id"             "1"
+        "allplayers_state"          "1"
+        "allplayers_match_stats"    "1"
+        "allplayers_weapons"        "1"
+        "allplayers_position"       "1"
+        "allgrenades"               "1"
+        "bomb"                      "1"
+    }
 }
