OBSERVERai v2.0 - Complete AI Integration & Training Data Fix
 Major Features:
- Fixed training data loading (now correctly shows 11,300+ samples instead of 78)
- Complete AI training integration with hot-reload system
- AIIMS (AI Intelligence Measurement System) with detailed statistics
- Real CS2 map name extraction from demo headers
- Comprehensive demo processing with positional analysis

 AI System Enhancements:
- Enhanced Observer AI with pattern recognition
- Positional Observer AI for map-aware predictions
- Pattern Memory AI for behavioral analysis
- Kill Pattern Analyzer with 15,149+ kills from 148 demos
- Model hot-reload system (30-second automatic updates)

 Technical Improvements:
- Consolidated training data from multiple sources
- Go-based CS2 header extraction tool
- Line of sight calculations using AWPY navigation
- Comprehensive demo processor with real map names
- Professional build system for standalone executables

 Documentation:
- Complete README.md rewrite with comprehensive English documentation
- Step-by-step installation and AI training guides
- Professional use cases and troubleshooting sections
- AIIMS statistics explanation and training tips

 Fixed Critical Issues:
- Training data loading showing incorrect sample count (78  11,300+)
- Model update notifications between AI trainer and observer
- Demo processing compatibility with CS2 format
- Hot-reload integration for seamless AI improvements

 Ready for professional esports broadcasting and community AI training!

--- a/KeylessOBS/requirements.txt
+++ b/KeylessOBS/requirements.txt
@@ -1,1 +1,28 @@
+# CS2 Observer AI - Python Dependencies
+# Complete requirements for standalone build
+
+# Core scientific computing
+numpy>=1.21.0
+pandas>=1.3.0
+scipy>=1.7.0
+
+# Machine learning
+scikit-learn>=1.0.0
+joblib>=1.1.0
+
+# System utilities
+psutil>=5.8.0
 keyboard==0.13.5
+
+# Networking and web
+requests>=2.25.0
+
+# Build tools
+pyinstaller>=5.0.0
+
+# Optional: AWPY for advanced demo analysis (if available)
+# awpy>=1.0.0
+
+# Development and testing
+pytest>=6.0.0
+pytest-cov>=2.12.0
