Add essential maps folder for AI positioning system
 Includes navigation and positioning data for all major CS2 maps:
- de_ancient, de_dust2, de_inferno, de_mirage
- de_nuke, de_overpass, de_train

 Map data includes:
- Navigation meshes (.nav) - For pathfinding and positioning
- Block mask files (.npy) - For line of sight calculations
- Origin files (.npy) - For coordinate transformations

 Essential files required for:
- Positional AI predictions
- Line of sight calculations
- Map-aware kill probability analysis
- AWPY navigation system integration

Updated .gitignore to include maps/ folder as it's critical for software functionality.

--- a/KeylessOBS/.gitignore
+++ b/KeylessOBS/.gitignore
@@ -19,9 +19,8 @@ observer_ai_model.pkl
 *.pkl
 *.joblib
 
-# Demo files and maps
+# Demo files (maps/ folder is essential and should be included)
 demos/
-maps/
 
 # Logs and cache
 *.log
